# Snake

./: .clang-format  .cproject  .gitignore  CMakeLists.txt  CMakePresets.json  file_tree.txt
src/: Button.h  ErrorHandling.h  Footer.h  GreenRectangle.h  Grid.h  Header.h  Image.cpp  Image.h  Rectangle.h  ScaledText.h  SettingsMenu.h  Text.h  TruncatedText.h  UI.h  UserEvents.h  Window.h  WrappedText.h  main.cpp
src/Game/: Board.cpp  Board.h  Food.cpp  Food.h  Game.cpp  Game.h  Position.cpp  Position.h  Snake.cpp  Snake.h
src/Helper/: Enums.h
src/gui/: BoardRenderer.h  FoodRenderer.h  SnakeRenderer.h  Window.cpp  Window.h
